# HITSZ_RoboMaster2021_Engineer

./: CMakeLists.txt  README.md  main.cpp
com/include/: data_manager.h  datatypes.h  rmserial.h
com/src/: data_manager.cpp  datatypes.cpp  rmserial.cpp
mineral/: run.cpp
mineral/include/: mineral.h
mineral/src/detect/: detect_mineral_white.cpp  detect_mineral_yellow.cpp
mineral/src/get/: get_fit_contours.cpp  get_fit_points.cpp  get_send_data.cpp  get_target_points.cpp
mineral/src/init/: default_constructor.cpp  init_mineral.cpp
mineral/src/mor/: mor_dropped_yellow_mineral.cpp  mor_white_mineral.cpp
mineral/src/send/: send_target.cpp
mineral/src/tool/: sort.cpp
rmconfig/: parameter.h  rmconfig.h  uvc_v4l2.cpp  uvc_v4l2.h
